Minor spelling fixes.

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                     </div> <!-- end of image-container -->
                 </div> <!-- end of col -->
                 <div class="col-lg-4">
-                    <h3>Students Information</h3>
+                    <h3>Student Information</h3>
                     <hr>
                     <h5>What's in it for you?</h5>
                     <p>You will be a part of a small team of programming students and will work together on projects to help charities and non-profits who don’t have the means to otherwise access expert technical services.</p>
@@ -303,11 +303,11 @@
                     </div> <!-- end of image-container -->
                 </div> <!-- end of col -->
                 <div class="col-lg-4">
-                    <h3>Causes Information</h3>
+                    <h3>Cause Information</h3>
                     <hr>
                     <h5>How will this work?</h5>
                     <p>
-                      Projects selection will be based on participating student group capacity, and skillset.
+                      Project selection will be based on participating student group capacity, and skillset.
                     </p>
                     <p>
                       Student groups will assign a member of their team to communicate with the cause over the course of the year.
@@ -346,7 +346,7 @@
                     </div> <!-- end of image-container -->
                 </div> <!-- end of col -->
                 <div class="col-lg-4">
-                    <h3>Mentors Information</h3>
+                    <h3>Mentor Information</h3>
                     <hr>
                     <h5>Why become a mentor?</h5>
                     <p>
