--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,7 @@
 	<meta property="og:type" content="article" />
 
     <!-- Website Title -->
-    <title>Project Updates | Code The Change YYC</title>
+    <title>Projects Updates | Code The Change YYC</title>
 
     <!-- Styles -->
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,400i,600,700,700i&amp;subset=latin-ext" rel="stylesheet">
@@ -88,7 +88,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1>Project Update</h1>
+                    <h1>Projects Updates</h1>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
@@ -118,7 +118,7 @@
                 <div class="col-lg-10 offset-lg-1">
                     <div class="text-container">
                         <h3>Hey, updates on all our past, present, and future projects are going to be detailed here.</h3>
-                          <p>Project list coming soon. <br> Stay tuned!</p>
+                          <p>List of projects coming soon. <br> Stay tuned!</p>
                     </div> <!-- end of text-container -->
                 </div>
             </div> <!-- end of row -->
