--- a/index.html
+++ b/index.html
@@ -450,41 +450,25 @@
             <div class="row">
                 <div class="col-lg-12">
 
-                    <!-- Team Member -->
-                    <div class="team-member">
-                        <div class="image-wrapper">
-                            <img class="img-fluid" src="images/_camilo.jpg" alt="alternative">
-                        </div> <!-- end of image-wrapper -->
-                        <p class="p-large"><strong>Camilo Rostoker</strong></p>
-                        <p class="job-title">Dev Leader @ Benevity</p>
-                        <span class="social-icons">
-                            <span class="fa-stack">
-                                <a href=https://www.linkedin.com/in/rostoker/>
-                                    <i class="fas fa-circle fa-stack-2x"></i>
-                                    <i class="fab fa-linkedin-in fa-stack-1x"></i>
-                                </a>
-                            </span>
-                        </span> <!-- end of social-icons -->
-                    </div> <!-- end of team-member -->
-                    <!-- end of team member -->
+                  <h3>Student Executives</h3>
+
 
                     <!-- Team Member -->
                     <div class="team-member">
                         <div class="image-wrapper">
-                            <img class="img-fluid" src="images/_priyash.jpg" alt="alternative">
+                            <img class="img-fluid" src="images/_cole.jpeg" alt="alternative">
                         </div> <!-- end of image wrapper -->
-                        <p class="p-large"><strong>Priyash Bista</strong></p>
-                        <p class="job-title">Scrum Master @ Benevity</p>
+                        <p class="p-large"><strong>Cole Thiessen</strong></p>
+                        <p class="job-title">UofC Leader</p>
                         <span class="social-icons">
                           <span class="fa-stack">
-                              <a href=https://www.linkedin.com/in/priyash/>
+                              <a href=https://www.linkedin.com/in/ckthiessen/>
                                   <i class="fas fa-circle fa-stack-2x"></i>
                                   <i class="fab fa-linkedin-in fa-stack-1x"></i>
                               </a>
                           </span>
                         </span> <!-- end of social-icons -->
                     </div> <!-- end of team-member -->
-                    <!-- end of team member -->
 
                     <!-- Team Member -->
                     <div class="team-member">
@@ -522,22 +506,46 @@
                     </div> <!-- end of team-member -->
                     <!-- end of team member -->
 
+                    <br/>
+                    <h3>External Advisors</h3>
                     <!-- Team Member -->
                     <div class="team-member">
                         <div class="image-wrapper">
-                            <img class="img-fluid" src="images/_cole.jpeg" alt="alternative">
+                            <img class="img-fluid" src="images/_camilo.jpg" alt="alternative">
+                        </div> <!-- end of image-wrapper -->
+
+                        <p class="p-large"><strong>Camilo Rostoker</strong></p>
+                        <p class="job-title">Dev Leader @ Benevity</p>
+                        <span class="social-icons">
+                            <span class="fa-stack">
+                                <a href=https://www.linkedin.com/in/rostoker/>
+                                    <i class="fas fa-circle fa-stack-2x"></i>
+                                    <i class="fab fa-linkedin-in fa-stack-1x"></i>
+                                </a>
+                            </span>
+                        </span> <!-- end of social-icons -->
+                    </div> <!-- end of team-member -->
+                    <!-- end of team member -->
+
+                    <!-- Team Member -->
+                    <div class="team-member">
+                        <div class="image-wrapper">
+                            <img class="img-fluid" src="images/_priyash.jpg" alt="alternative">
                         </div> <!-- end of image wrapper -->
-                        <p class="p-large"><strong>Cole Thiessen</strong></p>
-                        <p class="job-title">UofC Leader</p>
+                        <p class="p-large"><strong>Priyash Bista</strong></p>
+                        <p class="job-title">Scrum Master @ Benevity</p>
                         <span class="social-icons">
                           <span class="fa-stack">
-                              <a href=https://www.linkedin.com/in/ckthiessen/>
+                              <a href=https://www.linkedin.com/in/priyash/>
                                   <i class="fas fa-circle fa-stack-2x"></i>
                                   <i class="fab fa-linkedin-in fa-stack-1x"></i>
                               </a>
                           </span>
                         </span> <!-- end of social-icons -->
                     </div> <!-- end of team-member -->
+                    <!-- end of team member -->
+
+
                     <!-- end of team member -->
 
                 </div> <!-- end of col -->
@@ -553,8 +561,10 @@
                 <div class="col-lg-12">
                     <h2>Contact Information</h2>
                     <ul class="list-unstyled li-space-lg">
-                        <li class="address">Reach out to us on our Facebook page or via email</li>
+                        <li class="address">Since Code the Change YYC is composed of students from multiple post-seconary institutions, the club needed a central place to hold events and gatherings.  Benevity as a corporate partner graciously provides their office space for club events and meetups.  Reach out to us on our <a href="https://www.facebook.com/CodeTheChangeYYC/">Facebook page</a> or via email</li>
+
                         <li><i class="fas fa-map-marker-alt"></i>611 Meredith Rd NE #700, Calgary, AB T2E 2W5, Canada</li>
+
                         <li><i class="fas fa-envelope"></i><a class="turquoise" href="mailto:codethechangeyyc@gmail.com">codethechangeyyc@gmail.com</a></li>
                     </ul>
                 </div> <!-- end of col -->
