Minor changes: * Added spacing and changed heading type on the team page. * Moved the email link to one line. * Changed Kieran's picture size to match with the rest of the team.

--- a/index.html
+++ b/index.html
@@ -450,8 +450,8 @@
             <div class="row">
                 <div class="col-lg-12">
 
-                  <h3>Student Executives</h3>
-
+                  <h4>Student Executives</h4>
+                  <br/>
 
                     <!-- Team Member -->
                     <div class="team-member">
@@ -506,8 +506,8 @@
                     </div> <!-- end of team-member -->
                     <!-- end of team member -->
 
+                    <h4>External Advisors</h4>
                     <br/>
-                    <h3>External Advisors</h3>
                     <!-- Team Member -->
                     <div class="team-member">
                         <div class="image-wrapper">
@@ -561,11 +561,11 @@
                 <div class="col-lg-12">
                     <h2>Contact Information</h2>
                     <ul class="list-unstyled li-space-lg">
-                        <li class="address">Since Code the Change YYC is composed of students from multiple post-seconary institutions, the club needed a central place to hold events and gatherings.  Benevity as a corporate partner graciously provides their office space for club events and meetups.  Reach out to us on our <a href="https://www.facebook.com/CodeTheChangeYYC/">Facebook page</a> or via email</li>
+                        <li class="address">Since Code the Change YYC is composed of students from multiple post-seconary institutions, the club needed a central place to hold events and gatherings. Benevity as a corporate partner graciously provides their office space for club events and meetups.
+                          <br/> Reach out to us on our <a href="https://www.facebook.com/CodeTheChangeYYC/">Facebook page</a> or via email at <a class="turquoise" href="mailto:codethechangeyyc@gmail.com">codethechangeyyc@gmail.com</a>.</li>
 
                         <li><i class="fas fa-map-marker-alt"></i>611 Meredith Rd NE #700, Calgary, AB T2E 2W5, Canada</li>
 
-                        <li><i class="fas fa-envelope"></i><a class="turquoise" href="mailto:codethechangeyyc@gmail.com">codethechangeyyc@gmail.com</a></li>
                     </ul>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -643,23 +643,10 @@
                     <div class="footer-col last">
                         <h4>Social Media</h4>
                         <span class="fa-stack">
-                            <a href="#your-link">
+                            <a href="https://www.facebook.com/CodeTheChangeYYC/">
                                 <i class="fas fa-circle fa-stack-2x"></i>
                                 <i class="fab fa-facebook-f fa-stack-1x"></i>
                             </a>
-                        </span>
-                        <span class="fa-stack">
-                            <a href="#your-link">
-                                <i class="fas fa-circle fa-stack-2x"></i>
-                                <i class="fab fa-instagram fa-stack-1x"></i>
-                            </a>
-                        </span>
-                        <span class="fa-stack">
-                            <a href="#your-link">
-                                <i class="fas fa-circle fa-stack-2x"></i>
-                                <i class="fab fa-linkedin-in fa-stack-1x"></i>
-                            </a>
-                        </span>
                     </div>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
