--- a/index.html
+++ b/index.html
@@ -647,6 +647,7 @@
                                 <i class="fas fa-circle fa-stack-2x"></i>
                                 <i class="fab fa-facebook-f fa-stack-1x"></i>
                             </a>
+                        </span>
                     </div>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
