Change wording of post-secondary partners to make it more informal - not a formal partnership yet, but student membership representation.

--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h2>Post Secondary Partners</h2>
-                    <p class="p-heading p-large">Participating computer science and engineering student clubs within post-secondary institutions throughout the Calgary area.</p>
+                    <h2>Post-Secondary Representation</h2>
+                    <p class="p-heading p-large">We have student members, typically in Computer Science and Engineering programs, from the following post-secondary institutions in Calgary.</p>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
             <div class="row">
@@ -122,28 +122,34 @@
 
                     <!-- Card -->
                     <div class="card">
-                        <img class="card-image" src="images/_uofc.png" alt="alternative">
+                        <img class="card-image" src="images/_uofc.png" alt="University of Calgary">
+<!--
                         <div class="card-body">
                             <h4 class="card-title">Computer Science Undergraduate Society</h4>
                         </div>
+-->
                     </div>
                     <!-- end of card -->
 
                     <!-- Card -->
                     <div class="card">
-                        <img class="card-image" src="images/_mru.png" alt="alternative">
+                        <img class="card-image" src="images/_mru.png" alt="Mount Royal University">
+<!--
                         <div class="card-body">
                             <h4 class="card-title">Computing Student's Society</h4>
                         </div>
+-->
                     </div>
                     <!-- end of card -->
 
                     <!-- Card -->
                     <div class="card">
-                        <img class="card-image" src="images/_sait.png" alt="alternative">
+                        <img class="card-image" src="images/_sait.png" alt="Southern Alberta Institute of Technology">
+<!--
                         <div class="card-body">
                             <h4 class="card-title">Southern Alberta Institute of Technology</h4>
                         </div>
+-->
                     </div>
                     <!-- end of card -->
 
