Added social media buttons for LinkedIn and Instagram

--- a/index.html
+++ b/index.html
@@ -654,6 +654,18 @@
                                 <i class="fab fa-facebook-f fa-stack-1x"></i>
                             </a>
                         </span>
+                        <span class="fa-stack">
+                            <a href="https://www.linkedin.com/company/code-the-change-yyc/">
+                                <i class="fas fa-circle fa-stack-2x"></i>
+                                <i class="fab fa-linkedin-in fa-stack-1x"></i>
+                            </a>
+                        </span>
+                        <span class="fa-stack">
+                            <a href="https://www.instagram.com/codethechangeyyc/">
+                                <i class="fas fa-circle fa-stack-2x"></i>
+                                <i class="fab fa-instagram fa-stack-1x"></i>
+                            </a>
+                        </span>
                     </div>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
