tweak wording on cause CTA and also re-add post-secondary partner titles but with different copy

--- a/index.html
+++ b/index.html
@@ -123,33 +123,27 @@
                     <!-- Card -->
                     <div class="card">
                         <img class="card-image" src="images/_uofc.png" alt="University of Calgary">
-<!--
                         <div class="card-body">
-                            <h4 class="card-title">Computer Science Undergraduate Society</h4>
+                            <h4 class="card-title">Community Programming Undergraduate Society</h4>
                         </div>
--->
                     </div>
                     <!-- end of card -->
 
                     <!-- Card -->
                     <div class="card">
                         <img class="card-image" src="images/_mru.png" alt="Mount Royal University">
-<!--
                         <div class="card-body">
                             <h4 class="card-title">Computing Student's Society</h4>
                         </div>
--->
                     </div>
                     <!-- end of card -->
 
                     <!-- Card -->
                     <div class="card">
                         <img class="card-image" src="images/_sait.png" alt="Southern Alberta Institute of Technology">
-<!--
                         <div class="card-body">
                             <h4 class="card-title">Southern Alberta Institute of Technology</h4>
                         </div>
--->
                     </div>
                     <!-- end of card -->
 
@@ -212,8 +206,7 @@
                                         where students in technology-focused programs volunteer their time to work on projects for
                                         causes as a way to grow their skills, gain experience, attain mentorship, and give back to the community.
                                       </p>
-                                      <p>We are looking for causes with projects that require assistance with developing a web/phone application,
-                                        data collection, or aggregation tools. Ideally, the project is already underway and requires a lot more technical work to move it along.
+                                      <p>We seek to partner with causes that have projects on the go that need additional programming and software development support. We work on a wide range of projects, from developing web/phone apps, to RESTful web services to data collection or aggregation tools.  We will work with you to find the right tool for the job.  We prefer projects that are already underway with a good vision, but require a lot more technical work to move it along.
                                       </p>
                                     </div>
                                 </li>
