AWS codepipeline test

--- a/index.html
+++ b/index.html
@@ -672,7 +672,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <p class="p-small">Copyright © Code The Change YYC - Web Page Template by <a href="https://inovatik.com">Inovatik</a></p>
+                    <p class="p-small">Copyright © Code The Change YYC<br/>Web Page Template by <a href="https://inovatik.com">Inovatik.</a></p>
                 </div> <!-- end of col -->
             </div> <!-- enf of row -->
         </div> <!-- end of container -->
