Tweak some wording on the 'Details' section CTAs

--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@
                                       </p>
                                       <p>We seek to partner with causes that have projects on the go that need additional programming and software development support. We work on a wide range of projects, from developing web/phone apps, to RESTful web services to data collection or aggregation tools.  We will work with you to find the right tool for the job.  We prefer projects that are already underway with a good vision, but require a lot more technical work to move it along.
                                       </p>
+                                      <p>If you have a potential project, please complete a <a href="causes.html">cause project submission</a></p>.
                                     </div>
                                 </li>
                             </ul>
@@ -402,7 +403,7 @@
                         <a href="events.html">
                           <img class="card-image" src="images/_calendar.svg" alt="alternative">
                           <div class="card-body">
-                              <h4 class="card-title">Click here for upcoming events!</h4>
+                              <h4 class="card-title">Upcoming Events</h4>
                           </div>
                         </a>
                     </div>
@@ -413,7 +414,7 @@
                       <a href="projects.html">
                         <img class="card-image" src="images/_projects.svg" alt="alternative">
                         <div class="card-body">
-                            <h4 class="card-title">Click here for projects!</h4>
+                            <h4 class="card-title">Our Projects</h4>
                         </div>
                       </a>
                     </div>
@@ -424,7 +425,7 @@
                       <a href="causes.html">
                         <img class="card-image" src="images/_signup.svg" alt="alternative">
                         <div class="card-body">
-                            <h4 class="card-title">Click here for cause registration!</h4>
+                            <h4 class="card-title">Cause Project Submission</h4>
                         </div>
                       </a>
                     </div>
