Fixed form clearing before submitting.

--- a/causes.html
+++ b/causes.html
@@ -98,7 +98,8 @@
     <div class="container">
         <h2 class="mb-4 text-secondary font-weight-normal">Cause Registration Form</h4>
         <form id="partner-form" action="https://docs.google.com/forms/d/1IaQkxGmZ3KJfYunL0Bmtj6pzr-UDhrhBF5wBM6_YTC0"
-         method="post">
+         method="post"
+         onsubmit="return window.submitGoogleForm(this);">
           <fieldset>
             <p>Please complete this form if you are interested in exploring options for a specific project or a new
               partnership with the Code the Change YYC.</p>
