--- a/causes.html
+++ b/causes.html
@@ -153,9 +153,8 @@
                 additional fees may also be required based on the specifications for the project (ex. databases)</label>
               <textarea class="form-control" id="budget" name="entry.530884051" rows="4" required=""></textarea>
             </div>
-            <p class="thank-you" style="display: none">Thank you! Our team will review your registration and get back to you as soon as possible.</p>
             <button type="submit" class="btn btn-outline-primary mt-2">
-              <h6 class="m-0">Submit</h6>
+            <h6 class="m-0"><a href="thankyou.html">Submit</a></h6>
             </button>
           </fieldset>
         </form>
