Put redirect into the JS rather than HTML and make POST request synchronous to avoid timing issues.

--- a/causes.html
+++ b/causes.html
@@ -154,16 +154,16 @@
               <textarea class="form-control" id="budget" name="entry.530884051" rows="4" required=""></textarea>
             </div>
             <button type="submit" class="btn btn-outline-primary mt-2">
-            <h6 class="m-0"><a href="thankyou.html">Submit</a></h6>
+               <h6 class="m-0">Submit</h6>
             </button>
           </fieldset>
         </form>
-        
+
         <!-- <p>We believe that software isn't a way to solve social issues in and of itself. Rather, its power is in
           supporting organizations who already have the relevant expertise in a given area.</p>
         <p>We love to hear from non-profit organizations looking to overcome any sort of obstacle. Please do not
           hesitate to contact us to discuss how we can help. We look forward to meeting you!</p> -->
-        
+
       </div>
     </section>
   </main>
