Update metadata description elements

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Create a stylish landing page for your business startup and get leads for the offered services with this free HTML landing page template.">
-    <meta name="author" content="Inovatik">
+    <meta name="description" content="Code the Change YYC - Where Calgary's post-secondary computer science + engineering changemakers come to make an impact working with causes.">
 
     <!-- OG Meta Tags to improve the way the post looks when you share the page on LinkedIn, Facebook, Google+ -->
 	<meta property="og:site_name" content="Code The Change yyc" />
@@ -18,7 +17,7 @@
 	<meta property="og:type" content="article" />
 
     <!-- Website Title -->
-    <title>Code The Change YYC</title>
+    <title>Code The Change YYC - Where Calgary's post-secondary Computer Science + Engineering changemakers come to make an impact working with causes.</title>
 
     <!-- Styles -->
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,400i,600,700,700i&amp;subset=latin-ext" rel="stylesheet">
