--- a/causes.html
+++ b/causes.html
@@ -1,12 +1,11 @@
-<!DOCTYPE html>
+ope<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Create a stylish landing page for your business startup and get leads for the offered services with this free HTML landing page template.">
-    <meta name="author" content="Inovatik">
+    <meta name="description" content="Code the Change YYC - Cause Registration Form - Submit your cause's project to us for evaluation.">
 
     <!-- OG Meta Tags to improve the way the post looks when you share the page on LinkedIn, Facebook, Google+ -->
 	<meta property="og:site_name" content="" /> <!-- website name -->
