--- a/thankyou.html
+++ b/thankyou.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Create a stylish landing page for your business startup and get leads for the offered services with this free HTML landing page template.">
-    <meta name="author" content="Inovatik">
+    <meta name="description" content="Thanks for submitting your project to us">
 
     <!-- OG Meta Tags to improve the way the post looks when you share the page on LinkedIn, Facebook, Google+ -->
 	<meta property="og:site_name" content="" /> <!-- website name -->
@@ -18,7 +17,7 @@
 	<meta property="og:type" content="article" />
 
     <!-- Website Title -->
-    <title>Cause Registration | Code The Change YYC</title>
+    <title>Cause Registration Thank You | Code The Change YYC</title>
 
     <!-- Styles -->
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,400i,600,700,700i&amp;subset=latin-ext" rel="stylesheet">
@@ -96,7 +95,7 @@
     </header> <!-- end of ex-header -->
     <!-- end of header -->
 
-    
+
     <!-- Breadcrumbs -->
     <div class="ex-basic-1">
         <div class="container">
