--- a/events.html
+++ b/events.html
@@ -116,8 +116,11 @@
             <div class="row">
                 <div class="col-lg-10 offset-lg-1">
                     <div class="text-container">
-                        <h3>Hey, this is where we share information regarding all our events: past, present, and future.</h3>
-                          <p>Google calendar plugin + facebook event page coming soon. <br> Stay tuned!</p>
+                      <h3>Nov 9 2019: Code The Change Calgary Kickoff + Hackathon</h3>
+                      <p>
+                        Join us as we launch the first ever city-wide chapter of Code The Change in Calgary! We want to celebrate this day by hosting a kickoff party and mini hackathon. The central theme of this event will be Climate Action. It's going to be a jam-packed, collaborative learning experience with a chance to work with industry experts and local non-profits.
+                      </p>
+                        <a href="https://eventbrite.com/e/74906851409">Click here to sign up through Eventbrite.</a>
                     </div> <!-- end of text-container -->
                 </div>
             </div> <!-- end of row -->
