--- a/index.html
+++ b/index.html
@@ -90,7 +90,12 @@
                     <div class="col-lg-6">
                         <div class="text-container">
                             <h1><span class="turquoise">Code The Change</span> <span class="red">YYC</span></h1>
-                            <p class="p-large">Welcome to the Calgary chapter of Code The Change.</p>
+                            <p class="p-large">Welcome to the Calgary chapter of Code The Change.
+                              <br>
+                              <a href="https://eventbrite.com/e/74906851409">
+                                Sign up to our Kickoff & Hackathon event on Nov 9 2019.
+                              </a>
+                            </p>
                             <a class="btn-solid-lg page-scroll" href="#students">Students</a>
                             <a class="btn-solid-lg page-scroll" href="#causes">Causes</a>
                             <a class="btn-solid-lg page-scroll" href="#mentors">Mentors</a>
