Add kickoff event poster to the events page.

--- a/events.html
+++ b/events.html
@@ -123,7 +123,8 @@
                         The central theme of this event will be Climate Action.
                         It's going to be a jam-packed, collaborative learning experience with a chance to work with industry experts and local non-profits.
                       </p>
-                        <a href="https://eventbrite.com/e/74906851409">Click here to sign up through Eventbrite.</a>
+                        <p><a href="https://eventbrite.com/e/74906851409">Click here to sign up through Eventbrite.</a></p>
+			<div align="center"><a href="https://eventbrite.com/e/74906851409"><img class="img-fluid" src="images/codethechangeyyc-kickoff.jpg" border="0"></a></div>
                     </div> <!-- end of text-container -->
                 </div>
             </div> <!-- end of row -->
