Tweak thankyou file; testing slack integration

--- a/thankyou.html
+++ b/thankyou.html
@@ -88,7 +88,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h1>Thank You!</h1>
-                    <h4>Our team will review your registration and get back to you as soon as possible.</h4>
+                    <h4>Our team will review your project submission and get back to you as soon as possible.</h4>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
