Tweak some wording and add more metadata to boost SEO

--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Code the Change YYC - Where Calgary's post-secondary computer science + engineering changemakers come to make an impact working with causes.">
+    <meta name="description" content="Code the Change YYC - Where Calgary's post-secondary computer science and engineering changemakers come to make an impact working with causes.">
 
     <!-- OG Meta Tags to improve the way the post looks when you share the page on LinkedIn, Facebook, Google+ -->
 	<meta property="og:site_name" content="Code The Change yyc" />
-	<meta property="og:site" content="http://www.codethechangeyyc.ca" />
-	<meta property="og:title" content="Code The Change Calgary Hub"/>
-	<meta property="og:description" content="Where Calgary's post-secondary computer science + engineering changemakers come to make an impact working with causes." />
-	<meta property="og:image" content="" /> <!-- image link, make sure it's jpg -->
-	<meta property="og:url" content="" /> <!-- where do you want your post to link to -->
+	<meta property="og:site" content="https://www.codethechangeyyc.ca" />
+	<meta property="og:title" content="Code The Change YYC"/>
+	<meta property="og:description" content="Where Calgary's post-secondary computer science and engineering changemakers come to make an impact working with causes." />
+	<meta property="og:image" content="https://codethechangeyyc.ca/images/_logo.jpg" />
+	<meta property="og:url" content="https://www.codethechangeyyc.ca" /> <!-- where do you want your post to link to -->
 	<meta property="og:type" content="article" />
 
     <!-- Website Title -->
