Removed the contact us form. * Contact us form was commented out. * The map css was updated to be full width. * the div class was increased in order to take advantage of the page's full width.

--- a/index.html
+++ b/index.html
@@ -575,15 +575,15 @@
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-lg-12">
                     <div class="map-responsive">
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2508.0794383966327!2d-114.05320568377702!3d51.05162097956288!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x53717002bfa848b5%3A0xde11feaa52802a04!2sBenevity%2C%20Inc.!5e0!3m2!1sen!2sca!4v1570403455129!5m2!1sen!2sca" allowfullscreen=""></iframe>
                     </div>
                 </div> <!-- end of col -->
-                <div class="col-lg-6">
+                <!-- <div class="col-lg-6"> -->
 
                     <!-- Contact Form -->
-                    <form id="contactForm" data-toggle="validator" data-focus="false">
+                    <!-- <form id="contactForm" data-toggle="validator" data-focus="false">
                         <div class="form-group">
                             <input type="text" class="form-control-input" id="cname" required>
                             <label class="label-control" for="cname">Name</label>
@@ -609,10 +609,10 @@
                         <div class="form-message">
                             <div id="cmsgSubmit" class="h3 text-center hidden"></div>
                         </div>
-                    </form>
+                    </form> -->
                     <!-- end of contact form -->
 
-                </div> <!-- end of col -->
+                <!-- </div> < end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
     </div> <!-- end of form-2 -->
