--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
                 <div class="col-lg-12">
                     <h2>Contact Information</h2>
                     <ul class="list-unstyled li-space-lg">
-                        <li class="address">Since Code the Change YYC is composed of students from multiple post-seconary institutions, the club needed a central place to hold events and gatherings. Benevity as a corporate partner graciously provides their office space for club events and meetups.
+                        <li class="address">Since Code the Change YYC is composed of many students from multiple post-seconary institutions, the club needed a central place to hold events and gatherings. Benevity as a corporate partner graciously provides their office space for club events and meetups.
                           <br/> Reach out to us on our <a href="https://www.facebook.com/CodeTheChangeYYC/">Facebook page</a> or via email at <a class="turquoise" href="mailto:codethechangeyyc@gmail.com">codethechangeyyc@gmail.com</a>.</li>
 
                         <li><i class="fas fa-map-marker-alt"></i>611 Meredith Rd NE #700, Calgary, AB T2E 2W5, Canada</li>
