Added new drop down menu for registration related links

--- a/index.html
+++ b/index.html
@@ -57,18 +57,26 @@
                     <a class="nav-link page-scroll" href="#students">Who is it for?</a>
                 </li>
 
-                <!-- Dropdown Menu -->
+                <!-- Details Dropdown Menu -->
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle page-scroll" href="#information" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">Details</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="events.html"><span class="item-text">Events</span></a>
                         <div class="dropdown-items-divide-hr"></div>
                         <a class="dropdown-item" href="projects.html"><span class="item-text">Projects</span></a>
+                    </div>
+                </li>
+
+                <!-- Registration Dropdown Menu -->
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle page-scroll" href="#information" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">Sign Up</a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="members.html"><span class="item-text">Member Registration</span></a>
                         <div class="dropdown-items-divide-hr"></div>
                         <a class="dropdown-item" href="causes.html"><span class="item-text">Cause Registration</span></a>
                     </div>
                 </li>
-                <!-- end of dropdown menu -->
+                <!-- end of dropdown menus -->
 
                 <li class="nav-item">
                     <a class="nav-link page-scroll" href="#about">About</a>
