Added sign up page for new members. Form is sent to Google form.

--- a/causes.html
+++ b/causes.html
@@ -110,7 +110,7 @@
          onsubmit="return window.submitGoogleForm(this);">
           <fieldset>
             <p>Please complete this form if you are interested in exploring options for a specific project or a new
-              partnership with the Code the Change YYC.</p>
+              partnership with Code the Change YYC.</p>
             <div class="form-group">
               <label for="org-name">Organization Name</label>
               <input class="form-control" id="org-name" name="entry.1058055750" type="text" placeholder="Ex. Code the Change" required="">
