Change thank you page to be generic for both project and member submissions

--- a/thankyou.html
+++ b/thankyou.html
@@ -96,7 +96,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h1>Thank You!</h1>
-                    <h4>Our team will review your project submission and get back to you as soon as possible.</h4>
+                    <h3>Our team will review your submission and get back to you as soon as possible.</h3>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
