Used plugin to embed fb album

--- a/events.html
+++ b/events.html
@@ -132,13 +132,15 @@
                         It's going to be a jam-packed, collaborative learning experience with a chance to work with industry experts and local non-profits.
                       </p>
                         <p><a href="https://eventbrite.com/e/74906851409">Click here to sign up through Eventbrite.</a></p>
-			<div align="center"><a href="https://eventbrite.com/e/74906851409"><img class="img-fluid" src="images/codethechangeyyc-kickoff.jpg" border="0"></a></div>
-                    </div> <!-- end of text-container -->
+        <div align="center"><a href="https://eventbrite.com/e/74906851409"><img class="img-fluid" src="images/codethechangeyyc-kickoff.jpg" border="0"></a></div>        
+        <div class='embedsocial-album' data-ref="50c756f8f500eb5ea9e415b3f46eb802449ab57a"></div><script>(function(d, s, id){var js; if (d.getElementById(id)) {return;} js = d.createElement(s); js.id = id; js.src = "https://embedsocial.com/embedscript/ei.js"; d.getElementsByTagName("head")[0].appendChild(js);}(document, "script", "EmbedSocialScript"));</script>
+    </div> <!-- end of text-container -->
+
                 </div>
             </div> <!-- end of row -->
         </div> <!-- end of container -->
     </div> <!-- end of ex-basic -->
-    <!-- end of terms content -->
+        <!-- end of terms content -->
 
 
     <!-- Breadcrumbs -->
