Add info night to events page

--- a/events.html
+++ b/events.html
@@ -124,6 +124,12 @@
             <div class="row">
                 <div class="col-lg-10 offset-lg-1">
                     <div class="text-container">
+                        <h3>Jan 29 2020: Code the Change Club Info Night</h3>
+                        <p>Join us on January 29th to find out more about what we want to do at Code the Change and learn about the different kinds of projects available.</p>
+          <div align="center"><img class="img-fluid" src="images/codethechangeyyc-infonight.png" border="0"></a></div>        
+      </div> <!-- end of text-container -->
+  
+                    <div class="text-container">
                       <h3>Nov 9 2019: Code The Change Calgary Kickoff + Hackathon</h3>
                       <p>
                         Join us as we launch the first ever city-wide chapter of Code The Change in Calgary.
