removed sponsors dropdown temporarily

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
                         <a class="dropdown-item" href="events.html"><span class="item-text">Events</span></a>
                         <div class="dropdown-items-divide-hr"></div>
                         <a class="dropdown-item" href="projects.html"><span class="item-text">Projects</span></a>
-                        <div class="dropdown-items-divide-hr"></div>
-                        <a class="dropdown-item" href="sponsors.html"><span class="item-text">Sponsors</span></a>
+                        <!-- <div class="dropdown-items-divide-hr"></div> -->
+                        <!-- <a class="dropdown-item" href="sponsors.html"><span class="item-text">Sponsors</span></a> -->
                     </div>
                 </li>
 
